# flare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
samples/: 1.program  1.ts  3.ts  4.ts  5.ts
src/: CMakeLists.txt  flare.cpp  flare.h  main.cpp
src/ast/: AssignmentNode.cpp  AssignmentNode.h  CMakeLists.txt  CffiIncludeNode.h  ClassDeclNode.h  EmptyNode.h  ExceptionHandleNode.cpp  ExceptionHandleNode.h  ExprNode.cpp  ExprNode.h  FunctionCallNode.h  FunctionNode.h  IfStatementNode.h  LiteralNode.h  LogSmtNode.h  LoopNode.h  Node.cpp  Node.h  StatementListNode.h  StatementNode.h  TypeConvNode.h  ValuePlaceholderNode.h  VarDeclNode.cpp  VarDeclNode.h  VariableDerefNode.cpp  VariableDerefNode.h
src/ast/analyzer/: LoopAnalyzer.cpp  LoopAnalyzer.h
src/ast/constants/: AstConstants.h
src/ast/helpers/: AstConstants.h  Context.cpp  Context.h  TypeFactory.cpp  TypeFactory.h  VariableHelper.cpp  VariableHelper.h
src/ast/implementation/: AssignmentNode.cpp  CffiIncludeNode.cpp  ClassDeclNode.cpp  EmptyNode.cpp  ExceptionHandleNode.cpp  ExprNode.cpp  FunctionCallNode.cpp  FunctionNode.cpp  IfStatementNode.cpp  LiteralNode.cpp  LogSmtNode.cpp  LoopNode.cpp  Node.cpp  StatementListNode.cpp  StatementNode.cpp  TypeConvNode.cpp  ValuePlaceholderNode.cpp  VarDeclNode.cpp  VariableDerefNode.cpp
src/exceptions/: CMakeLists.txt  FlareException.cpp  FlareException.h  SemanticException.cpp  SemanticException.h  UnimplementedException.cpp  UnimplementedException.h
src/jit/: CMakeLists.txt  FlareJit.cpp  FlareJit.h
src/lang/: CMakeLists.txt  FlexLexer.h  driver.cpp  driver.h  parser.yy  scanner-helper.h  scanner.h  scanner.ll
src/types/: ArrayType.h  BaseType.h  BoolType.h  CMakeLists.txt  ClassObjectType.h  DoubleType.cpp  DoubleType.h  IntType.h  StringType.cpp  StringType.h  VoidType.h
src/types/implementation/: ArrayType.cpp  BaseType.cpp  BoolType.cpp  ClassObjectType.cpp  DoubleType.cpp  IntType.cpp  StringType.cpp  VoidType.cpp
stdapi/capi/: CMakeLists.txt  flare.h  flare_array.cpp  flare_auto_parallel.cpp  flare_string.cpp  libflare.cpp
stdapi/console/: console.ts
test/: CMakeLists.txt  LogicalOpsTest.cpp  SimpleArithmetic.cpp  TestInfra.cpp
test/hello-world/: config.json  expect.txt  script.ts
